--- a/templates/index.html
+++ b/templates/index.html
@@ -9,12 +9,20 @@
     <!--link rel="stylesheet" href="/static/css/style.css"-->
 
     <script type="text/javascript" src="/static/js/jquery1102.min.js"></script>
-    <link rel="stylesheet" href="/static/css/loginnew.css"/>
+    <link rel="stylesheet" href="/static/css/loginnew.css">
     <script type="text/javascript" src="/static/js/loginnew.js"></script>
 </head>
 
-<!--<body style='background:url(/static/img/bg1.png) no-repeat;background-size: cover; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover;' >-->
-<body>
+<!--<body styley>='background:url(/static/img/bg1.png) no-repeat;background-size: cover; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover;' >-->
+<body style="background-image: url(../static/img/xy3.jpg);
+    z-index: -99;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    background-size: 100% 100%;
+    background-size:cover;
+    background-attachment: fixed ">
     <div class='container' style='text-align:center;'>
         <div class="row">
             <!--title-->
@@ -49,7 +57,7 @@
     </div>
                 <div class="bxback">
 
-					<div class="item item2" style="background-image: url(../static/img/xy3.jpg);" ></div>
+					<!--div class="item item2" style="background-image: url(../static/img/xy3.jpg);" ></div-->
 				</div>
     <script src="/static/js/jquery-3.1.1.min.js"></script>
     <script src="/static/js/bootstrap.min.js"></script>
