--- a/static/css/loginnew.css
+++ b/static/css/loginnew.css
@@ -8,25 +8,37 @@ ul ol li {
 }
 
 body {
-	/*background-color: #2F4056;*/
-}
-
-
-.bxback {
     z-index: -99;
     bottom: 0px;
-    position: absolute;
+    position: fixed;
     left: 0;
     top: 0;
     width: 100%;
     height:100%;
     overflow: hidden;
-    background-size:100% 100%;
     background-attachment: fixed;
+    background-repeat: no-repeat;        
+    background-position: top center; 
+}
+
+
+.bxback {
+    z-index: -99;
+    /*background-image: url(./img/xy3.jpg);*/
+    bottom: 0px;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height:100%;
+    overflow: hidden;
+    background-attachment: fixed;
+    background-repeat: no-repeat;        
+    background-position: top center;         
 }
 
 .bxback .item {
-    position: absolute;
+    position: fixed;
     left: 0px;
     top: 0px;
     width: 100%;
