--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,15 @@
 </head>
 
 <!--<body style='background:url(/static/img/bg1.png) no-repeat;background-size: cover; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover;' >-->
-<body>
+<body style="background-image: url(../static/img/xy3.jpg);
+    z-index: -99;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    background-size: 100% 100%;
+    background-size:cover;
+    background-attachment: fixed ">
     <div class='container' style='text-align:center;'>
         <div class="row">
             <!--title-->
